# GitHubActionsSampleCpp

./: .gitignore  README.md
.github/workflows/: CMake_UTest.yml
dev/src/CLC/: CLC_DistAve.c  CLC_DistAve.cpp  CLC_MotorHysteresis.c  CLC_MotorHysteresis.cpp  CLC_MotorOutput.c  CLC_MotorOutput.cpp  CLC_MotorOutput.h  CLC_TargetMotorPower.c  CLC_TargetMotorPower.cpp  CLC_TravelDistance.c  CLC_TravelDistance.cpp  CLC_TravelSpeed.c  CLC_TravelSpeed.cpp
dev/src/UTIL/: util.c  util.cpp  util.h
dev/src/include/: ev3api.h
dev/test/src/: CMakeLists.txt
dev/test/src/CLC/: CMakeLists.txt  UTEST_TravelSpeed_calc_travel_speed.cpp  UTEST_TravelSpeed_init_travel_speed.cpp
dev/test/src/UTIL/: CMakeLists.txt  UTEST_util_init_buff.cpp  UTEST_util_limit_int.cpp
